[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "araali"
version = "0.0.25"
authors = [
  { name="Abhishek R. Singh", email="abhishek@araalinetworks.com" },
]
description = "Araali API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "python-dateutil",
  "pyyaml",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/araalinetworks/api/tree/main/python/api"
"Bug Tracker" = "https://github.com/araalinetworks/api/issues"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py27,py3

[testenv]
deps = pytest
commands = pytest -sv
passenv = HOME ARAALI_API_TOKEN
"""

[tool]
